# matlab_stuff

./: .gitignore  Paul's.lnk  Test.m  _Start Up Directory.lnk  amplitude_modulation.m  chiara.m  game.m  high_order_drive.m  higher_order.m  microscope_drivers_pointing.m  microscope_drivers_structural.m  microscope_environment.m  srinivias.m  structural_PK_29_04_14_GE.m  temp.m  wavefronts_test.m
4f_model/: Copy_of_telecheck.m
@aod2d/: efficiency.m  plot_efficiency_surface.m
@aod3d/: aod3d.m  aod_propagator.m  aod_propagator_vector.m  match_phase.m  plot_diffraction_angles_surface.m  plot_efficiency_power_freq.m  plot_efficiency_surface.m  plot_phase_surface.m  rescattered_efficiency.m
@aod3dFirst/: aod3dFirst.m  aod_propagator.m  plot_diffraction_angles_surface.m  plot_efficiency_surface_2aod.m  plot_efficiency_surface_qwp.m  rescattered_efficiency.m
@aodm99/: aodm99.m  efficiency.m  (+5 more)
exchange_public/writetif2/: .emacs.desktop  Makefile  Makefile~  Setup.lhs  TODO  TODO~  Wtifc.hi  Wtifc.hs~  writetif2.cabal  writetif2.cabal~
exchange_public/writetif2/Matlab/: Mex.hi  Mex.hs~
exchange_public/writetif2/Tiff/: LibTIFF.hi  LibTIFF.hs  LibTIFF.hs.new~  LibTIFF.hs~
exchange_public/writetif2/_darcs/: inventory  tentative_pristine
exchange_public/writetif2/_darcs/prefs/: author
exchange_public/writetif2/_darcs/pristine/: README  Wtifc.hs  writetif2.def
exchange_public/writetif2/_darcs/pristine/Matlab/: Mex.hs
exchange_public/writetif2/_darcs/pristine/src/: dllMain.c
exchange_public/writetif2/doc/: alpha.txt
exchange_public/writetif2/src/: dllMain.c~
(+378 files in other folders)
