DOES NOT WORK

Name: writetif2
Version: 0.0
Cabal-Version: >= 1.2
Synopsis: writetif replacement with alpha and XPOSTION, YPOSITION tags support
License-file: LICENSE
Author: Yakov ZAYTSEV
Maintainer: Yakov ZAYTSEV <iakovz@gmail.com>
Build-Depends: base
Category: Foreign

Library
  Build-Depends: base
  c-sources: src/dllMain.c
  cc-options: -Ic:\matlab\r2008a\extern\include -Idist/build
  ghc-shared-options: c:\matlab\r2008a\extern\lib\win32\microsoft\libmx.lib c:\matlab\r2008a\extern\lib\win32\microsoft\libmex.lib c:\matlab\r2008a\extern\lib\win32\microsoft\libmat.lib C:\GnuWin32\lib\libtiff.dll.a
  Exposed-Modules: Wtifc
  Extensions: ForeignFunctionInterface

